=================
Evince 49.alpha.0
=================

Placeholder for the release notes

===============
Evince 48.alpha
===============

backend:
  * Add missing break to make two columns right work (#1395, Alexandre Franke)
  * Add missing break to make two columns right work (#1395, Alexandre Franke)
  * Improve support for Adobe PDF open parameters (#2044, #222, #5, #7, Nelson Benítez León)
  * Do not implement module loading through GTypeModule (Pablo Correa Gómez)
  * Dvi: Fix code style relate to inline functions (Qiu Wenbo)
  * Dvi: Remove always false check (Qiu Wenbo)
  * Use GDateTime alternatives for EvAttachment (Pablo Correa Gómez)
  * Remove usage of ev_backends_manager_get_document (Qiu Wenbo)

build:
  * Bump libraries' API version to 4, do not hard-code (Pablo Correa Gomez)
  * Bump the minimum required version of cairo to 1.14.0 (Qiu Wenbo)
  * Bumpt libview, libdocument and Evince API version (Germán Poo-Caamaño)
  * Enable dri permission in flatpak (Germán Poo-Caamaño)
  * Fix app_id for flatpak in development mode (Germán Poo-Caamaño)
  * Fix generated desktop file names (Germán Poo-Caamaño)
  * Improve build location (Germán Poo-Caamaño)
  * Improve development build story (Germán Poo-Caamaño)
  * Reduce indirections to generate desktop files (Germán Poo-Caamaño)
  * Remove ENABLE_NLS flag (Qiu Wenbo)
  * Remove indirection for building schemas (Germán Poo-Caamaño)
  * Remove gidocgen submodule and requirement (Pablo Correa Gómez)
  * Remove name suffix workaround on MacOS (Qiu Wenbo)
  * Remove org.gnome.SettingsDaemon.MediaKeys (Maximiliano Sandoval R)
  * Remove unused EVINCEDATADIR (Qiu Wenbo)
  * Rename GNOMELOCALEDIR to EV_LOCALEDIR (Qiu Wenbo)
  * Set HAVE_CAIRO_PDF and HAVE_CAIRO_PS in config (Qiu Wenbo)
  * Update dependencies in flatpak (Germán Poo-Caamaño)
  * Update dependency versions for flatpak (Germán Poo-Caamaño)
  * Update flatpak dependencies (Germán Poo-Caamaño)
  * Updated flatpak poppler dependency (Andrew Murray)