@@ -37,3 +37,9 @@ show_class_hierarchy = true
 
 [source-location]
 base_url = "https://gitlab.gnome.org/GNOME/evince/-/blob/main/"
+
+[extra]
+# The same order will be used when generating the index
+content_files = [
+  "profiling.md",
+]
