@@ -2,7 +2,10 @@
 Evince 49.alpha.0
 =================
 
-Placeholder for the release notes
+libdocument:
+  * EV_PROFILE and EV_PROFILE_JOBS environment variables for profiling are now
+    ignored. Anybody wishing to profile evince can now use sysprof, which
+    provides a far better interface.
 
 ===============
 Evince 48.alpha
